Fix: search result page broken in some case

--- a/resource/css/_wiki.scss
+++ b/resource/css/_wiki.scss
@@ -136,6 +136,7 @@ div.body {
 
     code {
       background: transparent;
+      word-break: break-all;
     }
   }
 
